Fix #48 - Fix spacings and background color contrast

--- a/assets/css/cv.css
+++ b/assets/css/cv.css
@@ -20,6 +20,7 @@ h5 {
     font-weight: lighter;
     color: #444;
     margin-top: 0;
+    margin-bottom: 4px;
 }
 
 p {
